<resources>
    <string name="app_name">DevProject</string>
    <string name="hint_name">name</string>
    <string name="hint_lastname">lastname</string>
    <string name="hint_mail">mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_repassword">repassword</string>
    <string name="label_btn_login"><b>Connexion</b></string>
    <string name="label_btn_signup"><b>Je m\'inscris</b></string>
    <string name="politique">politique</string>
    <string name="str_welcome">Welcome</string>
    <string name="str_label_capture_buttom">capture image</string>
    <string name="title_activity_weather_details">WeatherDetailsActivity</string>
    <string name="title_activity_add_favorite_city">Leanback AddFavoriteCityActivity</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
</resources>