<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".Connexion">
    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="100dp"
        android:text="Connexion"
        android:gravity="center"
        android:textSize="40dp"
        android:textColor="#5a189a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- <Button
        android:id="@+id/btn_capture_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_label_capture_buttom"/>
    <ImageView
        android:id="@+id/img_selected_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="#7a7a7a"/>-->
    <EditText
        android:id="@+id/ed_mail"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_mail"
        android:inputType="textEmailAddress"
        android:layout_marginTop="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"/>
    <EditText
        android:id="@+id/ed_password"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:layout_marginTop="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:inputType="textPassword"
        />
    <CheckBox
        android:id="@+id/checkBoxAgree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="J'accepte les Conditions Générales et la politique de confidentialité et cookies."
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
    <Button
        android:id="@+id/btn_login_To_Application"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#5a189a"
        android:text="@string/label_btn_login"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"/>
</LinearLayout>